--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.1"
 edition = "2021"
 description = "A library to track changes in a HashMap over several iterations"
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/ElmerByte/rust-comparer"
 [dependencies]
