--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "comparer"
-version = "0.1.11"
+version = "0.2.0"
 edition = "2021"
-description = "A library to track changes in a HashMap over several iterations"
+description = "A simple library to track changes in a HashMap over several iterations"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/ElmerByte/rust-comparer"
